# eda_project_bootcamp

./: .gitignore  EDA_Project.ipynb  Fetch_Data_to_CSV.ipynb  LINKEDIN_POST.md  README.md  build_presentation.py  pyproject.toml  requirements.txt
interactive_map/: map_jennifer_targets.html
utils/: cartesian_interpolation.py
