[project]
name = "eda-project-bootcamp"
version = "1.0.0"
description = "Exploratory data analysis of the King County housing market"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

dependencies = [
    # analysis
    "pandas>=2.2",
    "numpy>=1.26",
    # visualisation
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "folium>=0.20",
    # notebook environment
    "jupyterlab>=4.0",
    "ipywidgets>=8.0",
    # data extraction from PostgreSQL
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
]

# Dropped from the original requirements.txt because nothing imports them:
#   altair, missingno, and jupyterlab-dash (a dead 0.1.0a3 alpha).
